--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "2.0.12",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "1.2.4",
+    "@react-icons/all-files": "^4.1.0",
     "apexcharts": "3.35.5",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "heroicons": "^2.0.18",
+    "heroicons-react": "^1.4.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
